syntax = "proto3";

package go.micro.srv.search;


service Search {
    rpc SearchList(Request) returns (Response) {}
}

message Request {
    string queryText = 1;
    int64 page = 2;
    int64 pageSize = 3;
}

message Response {
    repeated int64 entityIds = 1;
    int64 countAll = 2;
    int64 page = 3;
}